# headhunter_parser

./: .gitignore  README.md  main.py  pyproject.toml  todo.md
data/: data.csv  data.json  data.xlsx  vacancies.json
src/: base_api.py  base_parser.py  file_worker.py  headhunter_api.py  headhunter_parser.py  json_saver.py  utils.py  vacancy.py  validations.py  validator.py
tests/: test_file_worker.py  test_headhunter_api.py  test_json_saver.py  test_vacancy.py  test_validator.py
